# cmp653-project

./: .gitignore  DEMO.md  LICENSE  ProjeOzeti.md  README.md  config.yaml  pyproject.toml
demo/: README.md  app.py  content.json  pipeline.py  requirements.txt  test_ui.js
demo/templates/: index.html
experiments/: adaptive_analyst.py  adaptive_hunting.py  aggregate_all_results.py  allocation_policy_comparison.py  analyze_predictive.py  apriori_feasibility_case.py  arrival_processes.py  benchmark.py  composition_invariance.py  concentration_validation.py  equivalence_forecast.py  extended_predictive.py  extended_sweeps.py  flex_join_forecast.py  full_campaign.py  join_validation.py  killer_cases.py  latency_breakdown.py  leakage.py  live_join.py  markov_modulated.py  markov_occupancy.py  misspecification.py  mixed_workload.py  model_validation.py  ood_validation.py  predictive_comparison.py  predictor_comparison.py  realsystem_baseline.py  redbench_validation.py  regime_shift_case.py  residual_join.py  robustness.py  semantic_alpha_equiv.py  semantic_extended.py  semantic_normalize.py  semantic_validation.py  sf10_validation.py  smt_semantic.py  system_perf.py  (+7 more)
report/: R2_model_sketch.md  course_paper.tex  fig_arch.tex  fig_concept.tex  fig_savings.tex  final_report.tex  milestone_report.tex  presentation.tex  response_to_reviewer.md  short_paper.tex
report/dpm2026-short/: short_paper.tex
results/: REPORT.md
scripts/: generate_tpch_data.py  load_data.py  load_sf10.py  presentation_demo.py  setup_tpch.sql
tests/: test_allocation_policy.py  test_budget.py  test_clipping.py  test_join_sensitivity.py  test_mechanisms.py  test_middleware.py  test_model.py  test_normalize.py  test_parser.py  test_predictive.py  test_predictors.py  test_semantic.py  test_smt_equiv.py  test_template.py  test_topk.py  test_workload_learning.py
(+45 files in other folders)
