[project]
name = "dpdb"
version = "0.1.0"
description = "A Differentially Private SQL Middleware for Repeated Aggregate Queries"
requires-python = ">=3.10"
dependencies = [
    "psycopg2-binary>=2.9",
    "duckdb>=1.0",
    "sqlglot>=26.0",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "pandas>=2.0",
    "rich>=13.0",
    "scikit-learn>=1.3",
    "sentence-transformers>=2.5",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
norecursedirs = ["baselines", "data", "results", "experiments", ".git", "*.egg-info"]
